--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.290.0",
+        "changelog": "Fix emoji rendering (HTML entity issue), replace Tenor GIF API with Klipy, fix emoji picker positioning and settings gear.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.290.0/jellyfin-plugin-ratings_1.0.290.0.zip",
+        "checksum": "d3a241ade4e1e8c1c3b57153b207fa2e",
+        "timestamp": "2026-02-16T00:30:00Z"
+      },
+      {
         "version": "1.0.289.0",
         "changelog": "Fix emoji picker and settings gear: add z-index/positioning for pickers, fix admin panel overflow, fix heartbeat response casing.",
         "targetAbi": "10.11.0.0",
