--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.11.0",
+        "changelog": "Security: Guid.TryParse, EnableChat check on DM endpoints, IMDB URL validation",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.11.0/jellyfin-plugin-ratings_2.0.11.0.zip",
+        "checksum": "5d8b701cbe3d61b1775cde670e4e6b7e",
+        "timestamp": "2026-02-20T16:32:00Z"
+      },
+      {
         "version": "2.0.10.0",
         "changelog": "Fix: Force scroll to bottom when user sends a message (GIF or text)",
         "targetAbi": "10.11.0.0",
