--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.12.0",
+        "changelog": "Major security update: race condition fixes, XSS sanitization, input validation, HttpClient timeout",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.12.0/jellyfin-plugin-ratings_2.0.12.0.zip",
+        "checksum": "5d473bed602c61325bb455bdaa0ffe70",
+        "timestamp": "2026-02-20T17:00:00Z"
+      },
+      {
         "version": "2.0.11.0",
         "changelog": "Security: Guid.TryParse, EnableChat check on DM endpoints, IMDB URL validation",
         "targetAbi": "10.11.0.0",
